[gd_scene load_steps=2 format=3 uid="uid://cpg4lg1r3ff6m"]

[ext_resource type="Script" path="res://addons/dialogue_manager/views/settings_view.gd" id="1_06uxa"]

[node name="SettingsView" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -206.0
offset_bottom = -345.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_06uxa")

[node name="Editor" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NewTemplateButton" type="CheckBox" parent="Editor"]
layout_mode = 2
button_pressed = true
text = "New dialogue files will start with template text"

[node name="MissingTranslationsButton" type="CheckBox" parent="Editor"]
layout_mode = 2
text = "Treat missing translation keys as errors"

[node name="MissingTranslationsHint" type="Label" parent="Editor"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
text = "If you are using static translation keys then having this enabled will help you find any lines that you haven't added a key to yet."
autowrap_mode = 3

[node name="CharactersTranslationsButton" type="CheckBox" parent="Editor"]
layout_mode = 2
button_pressed = true
text = "Export character names in translation files"

[node name="WrapLinesButton" type="CheckBox" parent="Editor"]
layout_mode = 2
button_pressed = true
text = "Wrap long lines"

[node name="HSeparator" type="HSeparator" parent="Editor"]
layout_mode = 2

[node name="CustomTestSceneLabel" type="Label" parent="Editor"]
layout_mode = 2
text = "Custom test scene (must extend BaseDialogueTestScene)"

[node name="CustomTestScene" type="HBoxContainer" parent="Editor"]
layout_mode = 2

[node name="TestScenePath" type="LineEdit" parent="Editor/CustomTestScene"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "res://addons/dialogue_manager/test_scene.tscn"
editable = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="RevertTestScene" type="Button" parent="Editor/CustomTestScene"]
visible = false
layout_mode = 2
tooltip_text = "Revert to default test scene"
flat = true

[node name="LoadTestScene" type="Button" parent="Editor/CustomTestScene"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Editor"]
layout_mode = 2

[node name="DefaultCSVLocaleLabel" type="Label" parent="Editor"]
layout_mode = 2
text = "Default CSV Locale"

[node name="DefaultCSVLocale" type="LineEdit" parent="Editor"]
layout_mode = 2

[node name="Runtime" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="IncludeAllResponsesButton" type="CheckBox" parent="Runtime"]
layout_mode = 2
text = "Include responses with failed conditions"

[node name="IgnoreMissingStateValues" type="CheckBox" parent="Runtime"]
layout_mode = 2
text = "Skip over missing state value errors (not recommended)"

[node name="HSeparator" type="HSeparator" parent="Runtime"]
layout_mode = 2

[node name="StatesTitle" type="Label" parent="Runtime"]
layout_mode = 2
text = "State Shortcuts"

[node name="StatesMessage" type="Label" parent="Runtime"]
layout_mode = 2
text = "If an autoload is enabled here you can refer to its properties and methods without having to use its name."

[node name="StatesHint" type="Label" parent="Runtime"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
text = "ie. Instead of \"SomeState.some_property\" you could just use \"some_property\""
autowrap_mode = 3

[node name="GlobalsList" type="Tree" parent="Runtime"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
column_titles_visible = true
allow_reselect = true
hide_folding = true
hide_root = true
select_mode = 1
scroll_horizontal_enabled = false

[node name="CustomTestSceneFileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn ; Scene")

[connection signal="visibility_changed" from="." to="." method="_on_settings_view_visibility_changed"]
[connection signal="toggled" from="Editor/NewTemplateButton" to="." method="_on_sample_template_toggled"]
[connection signal="toggled" from="Editor/MissingTranslationsButton" to="." method="_on_missing_translations_button_toggled"]
[connection signal="toggled" from="Editor/CharactersTranslationsButton" to="." method="_on_characters_translations_button_toggled"]
[connection signal="toggled" from="Editor/WrapLinesButton" to="." method="_on_wrap_lines_button_toggled"]
[connection signal="pressed" from="Editor/CustomTestScene/RevertTestScene" to="." method="_on_revert_test_scene_pressed"]
[connection signal="pressed" from="Editor/CustomTestScene/LoadTestScene" to="." method="_on_load_test_scene_pressed"]
[connection signal="text_changed" from="Editor/DefaultCSVLocale" to="." method="_on_default_csv_locale_text_changed"]
[connection signal="toggled" from="Runtime/IncludeAllResponsesButton" to="." method="_on_include_all_responses_button_toggled"]
[connection signal="toggled" from="Runtime/IgnoreMissingStateValues" to="." method="_on_ignore_missing_state_values_toggled"]
[connection signal="button_clicked" from="Runtime/GlobalsList" to="." method="_on_globals_list_button_clicked"]
[connection signal="item_selected" from="Runtime/GlobalsList" to="." method="_on_globals_list_item_selected"]
[connection signal="file_selected" from="CustomTestSceneFileDialog" to="." method="_on_custom_test_scene_file_dialog_file_selected"]
